created gallery block

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     {{> header}}
     <main>
       {{> intro}}
+      {{> gallery}}
     </main>
     <script type="module" src="/main.js"></script>
   </body>
