created block best

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <main>
       {{> intro}}
       {{> gallery}}
+      {{> best}}
+      {{> quiz}}
     </main>
     <script type="module" src="/main.js"></script>
   </body>
