--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       {{> gallery}}
       {{> best}}
       {{> quiz}}
+      {{> catalog}}
     </main>
     <script type="module" src="/main.js"></script>
   </body>
