created commerc block

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  {{> head}}
+  {{>head}}
   <body> 
-    {{> header}}
+    {{>header}}
     <main>
-      {{> intro}}
-      {{> gallery}}
-      {{> best}}
-      {{> quiz}}
-      {{> catalog}}
+      {{>intro}}
+      {{>gallery}}
+      {{>best}}
+      {{>quiz}}
+      {{>catalog}}
+      {{>service}}
+      {{>commerc}}
     </main>
     <script type="module" src="/main.js"></script>
   </body>
