created footer and blog

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       {{>catalog}}
       {{>service}}
       {{>commerc}}
+      {{>shares}}
+      {{>blog}}
     </main>
+    {{>footer}}
     <script type="module" src="/main.js"></script>
   </body>
 </html>
